# mysr_p4

rover_description/: package.xml
rover_description/launch/: move_group.launch.py
rover_description/meshes/dae/: Cilindro.001.dae  Cilindro.002.dae  Cilindro.003.dae  Cilindro.006.dae  Cilindro.007.dae  Cilindro.009.dae  Cube.dae  Cubo.002.dae  Cubo.005.dae  Cubo.020.dae  Rosca.002.dae  Rosca.dae
rover_description/robots/: robot.urdf.xacro
rover_description/rviz/: robot.rviz
rover_description/urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
rover_description/urdf/sensors/: camera_grip.urdf.xacro  front_camera.urdf.xacro  imu_sensor.urdf.xacro
rover_description/urdf/wheels/: rover_wheel.urdf.xacro
rover_moveit_config/: package.xml
rover_moveit_config/config/: rover.ros2_control.xacro  rover.urdf.xacro
rover_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py
src/rover_description/: CMakeLists.txt
src/rover_description/config/: rover_bridge.yaml  rover_controllers.yaml
src/rover_description/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
src/rover_description/meshes/dae/: Cilindro.004.dae  Cilindro.005.dae  Cilindro.008.dae  Cilindro.010.dae  Cilindro.011.dae  Cilindro.dae  Cubo.001.dae  Cubo.003.dae  Cubo.004.dae  Cubo.021.dae  Cubo.dae  Rosca.001.dae  Rosca.003.dae  Rosca.004.dae  Rosca.005.dae
src/rover_description/urdf/: ros2_control.urdf.xacro  unnamed.urdf
src/rover_description/urdf/base/: robot_base.urdf.xacro
src/rover_description/urdf/utils/: utils.urdf.xacro
src/rover_moveit_config/: .setup_assistant  CMakeLists.txt
src/rover_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rover.srdf
src/rover_moveit_config/launch/: setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
